--- a/hw4/package.json
+++ b/hw4/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://abbyrchen.github.io/archen-pui-advanced-hw",
   "name": "hw4",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
